fix(ticket-thread): fix ai agent avatar color in dark mode (#8585)

--- a/src/pages/tickets/detail/components/TicketMessages/Avatar.less
+++ b/src/pages/tickets/detail/components/TicketMessages/Avatar.less
@@ -37,3 +37,9 @@
         font-size: 24px;
     }
 }
+
+.dark :local {
+    .isAIAgent {
+        color: var(--accessory-magenta-1);
+    }
+}
